[package]
name = "rust-workspace"
version = "0.7.18"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.24.2", features = ["full"] }
meval = "0.2"
rand = "0.8.5"
sysinfo = "0.18.0"
# ML Packages for Model Training
linfa = "0.6.1"
linfa-logistic = "0.6.1"
linfa-trees = { version = "0.6.1", features = ["serde"] }
csv = "1.2.0"
ndarray = "0.15.6"
ciborium = "0.2.0"
# GitHub data pipeline
octorust = "0.7.0"
serde_json = "1.0.107"
regex = "1.10.2"
mongodb = { version = "2.7.0", default-features = false, features = ["tokio-sync"] }

[dev-dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"] # Store all hooks in the .cargo-husky/hooks directory
