[package]
name = "rust-workspace"
version = "0.7.21"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.35.1", features = ["full"] }
meval = "0.2"
rand = "0.8.5"
sysinfo = "0.30.5"
# ML Packages for Model Training
linfa = "0.7.0"
linfa-logistic = { version = "0.7.0", features = ["serde"] }
linfa-trees = { version = "0.7.0", features = ["serde"] }
csv = "1.3.0"
ndarray = "0.15.6"
ciborium = "0.2.1"
# GitHub data pipeline
octorust = "0.7.0"
serde_json = "1.0.111"
regex = "1.10.2"
mongodb = { version = "2.8.0", default-features = false, features = ["tokio-sync"] }

[dev-dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"] # Store all hooks in the .cargo-husky/hooks directory
