[package]
name = "rust-workspace"
version = "0.8.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.1"
tokio = { version = "1.36.0", features = ["full"] }
meval = "0.2"
rand = "0.8.5"
sysinfo = "0.30.7"
# ML Packages for Model Training
linfa = "0.7.0"
linfa-logistic = { version = "0.7.0", features = ["serde"] }
linfa-trees = { version = "0.7.0", features = ["serde"] }
csv = "1.3.0"
ndarray = "0.15.6"
ciborium = "0.2.2"
plotters = "0.3.5"
# GitHub data pipeline
octorust = "0.7.0"
serde_json = "1.0.114"
regex = "1.10.3"
mongodb = { version = "2.8.1", default-features = false, features = ["tokio-sync"] }

[dev-dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"] # Store all hooks in the .cargo-husky/hooks directory
